--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-.settings/
-.groovy/
+*.iml
 .svn
-grails-gdsflex-*.zip
-bin/
-target/
-target-eclipse/
-*.sha1
-
+/.settings
+/.groovy
+/grails-gdsflex-*.zip
+/grails-gdsflex-*.zip.sha1
+/bin
+/target
+/target-eclipse
+/plugin.xml
+/.idea
